Fixed spacing of lists in the project details modals.

--- a/src/app/pages/projects/project-details/shared.project.component.mobile.scss
+++ b/src/app/pages/projects/project-details/shared.project.component.mobile.scss
@@ -8,7 +8,7 @@ $paragraph-padding: 30px;
     height: auto !important;
   }
 
-  p {
+  p, ul{
     padding-left: $paragraph-padding !important;
     padding-right: $paragraph-padding !important;
   }
