--- a/src/app/pages/projects/project-details/shared.project.component.scss
+++ b/src/app/pages/projects/project-details/shared.project.component.scss
@@ -36,8 +36,16 @@ article {
   }
   
   ul {
-    list-style-type: circle;
-    max-width: $max-width - 100px;
+    margin-left: 15px;
+    list-style-type: disc;
+
+    li {
+      padding: 4px 0;
+      
+      &:first-child, &:last-child {
+        padding: 0;
+      }
+    }
   }
   
   h3 {
